[gd_scene load_steps=4 format=3 uid="uid://cq5huuu6lo0hl"]

[ext_resource type="Script" uid="uid://bor06sjiij1fl" path="res://trigger.gd" id="1_4b0l7"]
[ext_resource type="Texture2D" uid="uid://c61lejj0mf3ey" path="res://ui/Untitled 06-12-2024 11-00-24.png" id="2_nsjue"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0vr4"]

[node name="Area2D" type="Area2D"]
script = ExtResource("1_4b0l7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h0vr4")

[node name="Untitled06-12-202411-00-24" type="Sprite2D" parent="."]
position = Vector2(-5.96046e-08, -2)
scale = Vector2(0.140625, 0.140625)
texture = ExtResource("2_nsjue")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
